# miMusic

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: main.rs  music.rs
