[package]
name = "miMusic"
version = "0.1.0"
edition = "2024"

[dependencies]
id3 = "1.16.2"
rand = "0.9.1"
ratatui = "0.29.0"
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-mp3"] }
serde = "1.0.219"
serde_json = "1.0.140"
symphonia = { version = "0.5.4", features = ["mp3"] }
tokio = "1.46.1"
walkdir = "2.5.0"
yt-dlp = "1.3.4"
